--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
     "sass": "^1.49.7",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.8"
   }
