--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,6 +13,11 @@
       "sizes": "192x192"
     },
     {
+      "src": "videowibu.mp4",
+      "type": "video/mp4",
+      "sizes": "800x600"
+    },
+    {
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
