--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
   "devDependencies": {
     "@types/jquery": "^3.5.14",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-slick": "^0.23.8"
+    "@types/react-slick": "^0.23.8",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.7",
+    "tailwindcss": "^3.0.23"
   }
 }
+  
